スタックトレースの表示機能を追加 (#34)
* スタックトレースの表示機能を追加

* スタックフレームの省略機能の英語が不自然だった問題を修正
...more N framesから、... N more framesに修正

* スタックトレースをInterpreterExceptionへ持たせるよう変更