@@ -2,6 +2,8 @@ package io.github.udonabe.donabe.runtime;
 
 import io.github.udonabe.donabe.ast.expr.BinaryOperator;
 import io.github.udonabe.donabe.ast.expr.UnaryOperator;
+import io.github.udonabe.donabe.error.ErrorUtil;
+import io.github.udonabe.donabe.runtime.context.stack.StackFrame;
 import io.github.udonabe.donabe.runtime.value.*;
 
 public final class Operations {
@@ -9,12 +11,13 @@ public final class Operations {
     }
 
     public String errorBinary(BinaryOperator operator, RuntimeValue<?> left, RuntimeValue<?> right) {
-        return String.format("Operator '%s' cannot be applied to types '%s' and '%s'.", operator, left.typeName(), right.typeName());
+        return "Operator '%s' cannot be applied to types '%s' and '%s'.".formatted(operator, left.typeName(), right.typeName());
     }
 
     public RuntimeValue<?> applyBinary(BinaryOperator operator,
                                        RuntimeValue<?> left,
-                                       RuntimeValue<?> right) {
+                                       RuntimeValue<?> right,
+                                       StackFrame currentFrame) {
         return switch (operator) {
             case PLUS -> {
                 //どちらかがStringの場合、Stringを返す。
@@ -29,7 +32,7 @@ public final class Operations {
                     right instanceof IntegerValue(Integer r)) {
                     yield new IntegerValue(l + r);
                 }
-                throw new InterpreterException(errorBinary(operator, left, right));
+                throw new InterpreterException(errorBinary(operator, left, right), currentFrame);
             }
             case MINUS -> {
                 //どちらかがintでない場合、エラー
@@ -37,7 +40,7 @@ public final class Operations {
                     right instanceof IntegerValue(Integer r)) {
                     yield new IntegerValue(l - r);
                 }
-                throw new InterpreterException(errorBinary(operator, left, right));
+                throw new InterpreterException(errorBinary(operator, left, right), currentFrame);
             }
             case MULTIPLICATION -> {
                 //どちらかがintでない場合、エラー
@@ -45,7 +48,7 @@ public final class Operations {
                     right instanceof IntegerValue(Integer r)) {
                     yield new IntegerValue(l * r);
                 }
-                throw new InterpreterException(errorBinary(operator, left, right));
+                throw new InterpreterException(errorBinary(operator, left, right), currentFrame);
             }
             case DIVISION -> {
                 //どちらかがintでない場合、エラー
@@ -53,7 +56,7 @@ public final class Operations {
                     right instanceof IntegerValue(Integer r)) {
                     yield new IntegerValue(l / r);
                 }
-                throw new InterpreterException(errorBinary(operator, left, right));
+                throw new InterpreterException(errorBinary(operator, left, right), currentFrame);
             }
             case EQUAL -> new BooleanValue(left.equals(right));
             case LESS -> {
@@ -62,7 +65,7 @@ public final class Operations {
                     right instanceof IntegerValue(Integer r)) {
                     yield new BooleanValue(l < r);
                 }
-                throw new InterpreterException(errorBinary(operator, left, right));
+                throw new InterpreterException(errorBinary(operator, left, right), currentFrame);
             }
             case GREATER -> {
                 //どちらかがintでない場合、エラー
@@ -70,7 +73,7 @@ public final class Operations {
                     right instanceof IntegerValue(Integer r)) {
                     yield new BooleanValue(l > r);
                 }
-                throw new InterpreterException(errorBinary(operator, left, right));
+                throw new InterpreterException(errorBinary(operator, left, right), currentFrame);
             }
             case LESS_EQUAL -> {
                 //どちらかがintでない場合、エラー
@@ -78,7 +81,7 @@ public final class Operations {
                     right instanceof IntegerValue(Integer r)) {
                     yield new BooleanValue(l <= r);
                 }
-                throw new InterpreterException(errorBinary(operator, left, right));
+                throw new InterpreterException(errorBinary(operator, left, right), currentFrame);
             }
             case GREATER_EQUAL -> {
                 //どちらかがintでない場合、エラー
@@ -86,34 +89,34 @@ public final class Operations {
                     right instanceof IntegerValue(Integer r)) {
                     yield new BooleanValue(l >= r);
                 }
-                throw new InterpreterException(errorBinary(operator, left, right));
+                throw new InterpreterException(errorBinary(operator, left, right), currentFrame);
             }
         };
     }
 
     private String errorUnary(UnaryOperator operator, RuntimeValue<?> target) {
-        return String.format("Operator '%s' cannot be applied to type '%s'.", operator, target.typeName());
+        return "Operator '%s' cannot be applied to type '%s'.".formatted(operator, target.typeName());
     }
 
-    public RuntimeValue<?> applyUnary(UnaryOperator operator, RuntimeValue<?> target) {
+    public RuntimeValue<?> applyUnary(UnaryOperator operator, RuntimeValue<?> target, StackFrame currentFrame) {
         return switch (operator) {
             case MINUS -> {
                 if (target instanceof IntegerValue(Integer value)) {
                     yield new IntegerValue(-value);
                 }
-                throw new InterpreterException(errorUnary(operator, target));
+                throw new InterpreterException(errorUnary(operator, target), currentFrame);
             }
             case PLUS -> {
                 if (target instanceof IntegerValue(Integer value)) {
                     yield new IntegerValue(+value);
                 }
-                throw new InterpreterException(errorUnary(operator, target));
+                throw new InterpreterException(errorUnary(operator, target), currentFrame);
             }
             case NOT -> {
                 if (target instanceof BooleanValue(Boolean value)) {
                     yield new BooleanValue(!value);
                 }
-                throw new InterpreterException(errorUnary(operator, target));
+                throw new InterpreterException(errorUnary(operator, target), currentFrame);
             }
         };
     }
